2000-05-21  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* nnshimbun.el: New backend.

	* gnus-group.el (gnus-group-make-shimbun-group): New command.

2000-05-17  Kenichi OKADA <okada@opaopa.org>

	* lisp/imap.el (imap-digest-md5-auth): Rewrite for the use of
	`sasl-digest-md5-digest-response' instead of
	`digest-md5-digest-response'.
	(TopLevel): Require `sasl' when compiling instead of `digest-md5';
	don't autoload "digest-md5".

2000-05-17  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-texi-format): Use
	`output-coding-system' instead of `coding-system-for-write' when
	old Mule is used.

2000-05-16  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-forward) Replace the use of `eolp' with
	`bolp' for detecting the start of the line.
	(message-indent-citation): Ditto.

2000-05-10   Daiki Ueno  <ueno@unixuser.org>

	* lisp/gnus-bbdb.el (gnus-bbdb/pop-up-bbdb-buffer): Don't bind
	`bbdb-use-pop-up' while executing `bbdb-pop-up-bbdb-buffer'.

2000-05-10  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-debug): Break MIME tags from the snoopies.
	(gnus-bug): Insert text/plain tag at the end of the buffer.

2000-05-10  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 01.

2000-05-10  Keiichi Suzuki  <keiichi@mdcnet.co.jp>

	* lisp/message.el (message-list-references): Do not insert
	duplicate Message-Id, when specified
	`message-list-references-add-position'.

	* lisp/gnus-bbdb.el (gnus-bbdb/split-mail): Support group address.
	(gnus-bbdb/insert-address-regexp): New function.

2000-05-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-debug): Add "nntp.el" and `defvoo'.

2000-05-08  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (T-gnus): Update to 6.14.4.

	* README.T-gnus: Update.

	* lisp/{webmail.el,rfc2047.el,nnmbox.el,nndoc.el,mml.el,mm-view.el,
	mm-partial.el,mm-decode.el,mm-bodies.el,message.el,lpath.el,